17-September-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * Upgraded to Angular 13, Ng-Matero 13. Updated to version 3.0.2.

16-September-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * backend-django/DjangoClarin/urls.py:
 * backend-django/clarin_backend/models.py: OpenID authentication in Django.

24-May-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/annotation-set-comparator/annotation-set-comparator.component.html:
 * clarin-angular/src/app/components/controls/annotation-set-comparator/annotation-set-comparator.component.ts:
 * clarin-angular/src/app/components/controls/annotation-set-inspector/annotation-set-inspector.component.html:
 * clarin-angular/src/app/components/controls/annotation-set-inspector/annotation-set-inspector.component.ts:
 * clarin-angular/src/app/helpers/annotation.ts:
 * clarin-angular/src/app/helpers/attribute.ts:
 * clarin-angular/src/css/clarin-annschema.scss: Changed the way overlapping
 annotations were handled during comparison. Now all overlaping annotations
 (even identical) are retained.

19-May-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/annotation-set-filter/annotation-set-filter.component.ts:
 * clarin-angular/src/app/components/views/analytics-annotation-values/analytics-annotation-values.component.html:
 * clarin-angular/src/app/components/views/analytics-annotation-values/analytics-annotation-values.component.ts:
 Added the query builder in analytics od annotation values.
 
18-May-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/helpers/annotation.ts: Changed overlap percentage to
 consider the smallest span (instead of the longest one).

15-May-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/helpers/text.ts:
 * clarin-angular/src/app/components/controls/annotation-detail/annotation-detail.component.html:
 * clarin-angular/src/app/helpers/annotation.ts: