@@ -1,3 +1,10 @@
+27-September-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
+ * api-client/api.py:
+ * backend-django/clarin_backend/models.py:
+ * backend-django/clarin_backend/serializers.py:
+ * backend-django/clarin_backend/sql_views.py: Added support for uploading
+ Documents containing an image.
+
 17-September-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
  * Upgraded to Angular 13, Ng-Matero 13. Updated to version 3.0.2.
 
